test/libsolidity/syntaxTests/specialFunctions/abidecode/abi_decode_invalid_argument_type_expression.sol
contract C {
    function f() pure public {
        abi.decode("", (type(uint)));
    }
}
// ----
// TypeError 1039: (68-78): Argument has to be a type name.
